# hpo-word2vec

./: .gitignore  README.md  _README.md  pyproject.toml  runner.py
config/: .env.aws.template  .env.cloud.template  .env.dev  .env.local  .env.local.template  .env.prod.template
hpw/: __init__.py  create_aws_block.py  data_preprocessing.py  drafts.py  s3_interaction.py  training.py
scripts/: create_aws_block.py  dotenv_cleaner.py  start_from_scratch.sh
