[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Odessit007", email = "igor.vustyanyuk@gmail.com"},
]
dependencies = [
    "evidently>=0.4.0",
    "gensim>=4.3.1",
    "mlflow>=2.5.0",
    "obonet>=1.0.0",
    "prefect>=2.11.1",
    "python-dotenv>=1.0.0",
    "pylint>=2.17.5",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "httpx>=0.24.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.3.3",
]
