[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Odessit007", email = "igor.vustyanyuk@gmail.com"},
]
dependencies = [
    "evidently>=0.4.0",
    "gensim>=4.3.1",
    "prefect>=2.11.2",
    "prefect-aws>=0.3.6",
    "python-dotenv>=1.0.0",
    "wandb>=0.15.8",
    "obonet>=1.0.0",
    "Cython>=3.0.0",
    "seaborn>=0.12.2",
    "matplotlib>=3.7.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "notebook>=7.0.1",
    "pre-commit>=3.3.3",
    "pytest>=7.4.0",
    "ruff>=0.0.282",
]
